# permea

./: .gitignore  README.md  docker-compose.yaml  makefile  pyproject.toml  requirements.dev.txt  requirements.txt
app/: cli.py  models.py  settings.py
docs/: RDFLib.md  sources.md  sparql.md
scripts/: rdf.py
